--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^1.7.5",
     "clipboard": "^2.0.8",
     "cos-js-sdk-v5": "^1.2.12",
